--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,3 +1,5 @@
 <p>admin works!</p>
 <p>Your linkedIn code = {{ linkedInToken }}</p>
+<button (click)="postLinkedin()">Post fot token </button>
+
 <p>{{json}}</p>
