--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,4 +1,4 @@
 <p>admin works!</p>
 <p>Your linkedIn code = {{ linkedInToken }}</p>
 <!--<button (click)="postLinkedin()">Post fot token </button>-->
-<p>{{accesstoken}}</p>
+<p>Access tooken is :{{accesstoken}}</p>
