--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -2,3 +2,6 @@
 <p>Your linkedIn code = {{ linkedInToken }}</p>
 <!--<button (click)="postLinkedin()">Post fot token </button>-->
 <p>Access token is : {{ accessToken }} </p>
+<p>{{firstname}}</p>
+<p>{{lastName}}</p>
+<p>{{photoUrl}}</p>
