Starting to work for get response obj 17 implementing sign out

--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,13 +1,7 @@
-<p>admin works!</p>
-<p>Your linkedIn code = {{ linkedInToken }}</p>
-<!--<button (click)="postLinkedin()">Post fot token </button>-->
-<p>Access token is : {{ accessToken }} </p>
-
-
-
 <div class="card-block"></div>
 <img class="card-img-top img-responsive photo" src="{{photoUrl}}">
 <div class="card-block">
     <h4 class="card-title">{{firstName }}</h4>
     <p class="card-text">{{ lastName }}</p>
 </div>
+<button class="btn btn-danger" (click)="signOut()">Sign out</button>
